--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,17 @@
-exclude: 'node_modules|.git'
+exclude: "node_modules|.git"
 default_stages: [commit]
 fail_fast: false
 
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
         files: "master_data.*"
         exclude: ".*json$|.*txt$|.*csv|.*md"
       - id: check-yaml
       - id: no-commit-to-branch
-        args: ['--branch', 'develop']
+        args: ["--branch", "develop"]
       - id: check-merge-conflict
       - id: check-ast
       - id: check-json
@@ -21,29 +20,20 @@ repos:
       - id: debug-statements
 
   - repo: https://github.com/PyCQA/flake8
-    rev: 5.0.4
+    rev: 6.0.0
     hooks:
       - id: flake8
-        additional_dependencies: [
-          'flake8-bugbear',
-        ]
-        args: ['--config', '.github/helper/flake8.conf']
+        additional_dependencies: ["flake8-bugbear"]
+        args: ["--config", ".github/helper/flake8.conf"]
         exclude: ".*setup.py$"
 
-  - repo: https://github.com/adityahase/black
-    rev: 9cb0a69f4d0030cdf687eddf314468b39ed54119
+  - repo: https://github.com/frappe/black
+    rev: 22.1.0
     hooks:
       - id: black
-        additional_dependencies: ['click==8.0.4']
-
-  - repo: https://github.com/timothycrosley/isort
-    rev: 5.9.1
-    hooks:
-      - id: isort
-        exclude: ".*setup.py$"
-
+        additional_dependencies: ["click==8.0.4"]
 
 ci:
-    autoupdate_schedule: weekly
-    skip: []
-    submodules: false
+  autoupdate_schedule: weekly
+  skip: []
+  submodules: false
